src/components/Dashboard/Sidebar/SidebarExchange/sidebarexchange.css
.sidebar--exchange {
	width: 80%;
	color: #fff;
	margin-top: 40px;
}

.sidebar--exchange h3 {
	text-align: center;
	margin-bottom: 40px;
}

.sidebar--exchange--loading {
	text-align: center;
}

.sidebar--exchange--item {
	display: flex;
	justify-content: space-around;
	align-items: center;
}

.sidebar--exchange--items {
	width: 33%;
	text-align: center;
	margin: 10px;
}

.sidebar--exchange--percentage--positive {
	color: #60f160;
}

.sidebar--exchange--percentage--negative {
	color: #ff6a6a;
}

.sidebar--exchange--header {
	font-size: 1em;
}

.sidebar--exchange--symbol {
	font-family: Raleway;
}

.sidebar--exchange--price {
	font-family: Montserrat, sans-serif;
	display: flex;
	justify-content: center;
	font-size: 1em;
}

.sidebar--exchange--price--postfix {
	font-size: 0.7em;
}

.sidebar--exchange--loading {
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}

